--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,16 @@ repositories {
 }
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.google.firebase.udacity.friendlychat"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 24
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        resConfigs "en"
     }
     buildTypes {
         release {
@@ -32,23 +33,25 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
 
     // Displaying images
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     // Firebase
-    compile 'com.google.firebase:firebase-database:9.6.0'
-    compile 'com.google.firebase:firebase-auth:9.6.0'
-    compile 'com.google.firebase:firebase-storage:9.6.0'
-    compile 'com.google.firebase:firebase-messaging:9.6.0'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-database:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-storage:12.0.1'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    implementation 'com.google.firebase:firebase-config:12.0.1'
 
     // FirebaseUI
-    compile 'com.firebaseui:firebase-ui-auth:0.6.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
